# cpp-gui-template

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: conan_setup.cmake  project_options.cmake
src/: CMakeLists.txt  app.cpp  common.h  options.cpp  options.h
src/config/: CMakeLists.txt  config.h.in
src/gui/: stats.hpp
test/: CMakeLists.txt
